# Ramsethi_Rangesh_Javris-2.0

./: .env.example  .gitignore  FILE_STRUCTURE.md  Guidence For ai.txt  Implementation steps for PhishNet XGBoost phishing.md  README.md  [https___developer.nvidia.com_ai-models](https___d.md  index.html  package.json  pyproject.toml  vercel.json
api/: check-vpa.js  report-fraud.js
blockchain/: hardhat.config.js  package-lock.json  package.json  test_run.js
blockchain/cache/: solidity-files-cache.json
blockchain/contracts/: FraudRegistry.sol
blockchain/scripts/: deploy.js  interact.js
dashboard/: packages.txt  requirements.txt  sample_data.csv  streamlit_app.py
dashboard/.streamlit/: config.toml
docs/: Build_Guide.md  GitHub_Instructions.md  PRD.md  Track_2_Reference.md  Track_2_Standalone.md
extension/: manifest.json
extension/background/: blockchain-logger.js  nvidia-explainer.js  service-worker.js
extension/content/: content-analyzer.js  qr-scanner.js  upi-parser.js
extension/data/: fraud_vpas.json
extension/icons/: placeholder.txt
extension/popup/: popup.html  popup.js
extension/scripts/: resize_icons.py
ml-engine/: README.md  feature_extraction.py  train_xgboost.py  upi_analyzer.py
phishguard-india/: README.md  package.json
phishguard-india/api/: check-vpa.js  report-fraud.js
phishguard-india/blockchain/contracts/: FraudRegistry.sol
phishguard-india/dashboard/: streamlit_app.py
phishguard-india/extension/: manifest.json
phishguard-india/extension/popup/: popup.css  (+2 more)
phishguard-india/ml-engine/: requirements.txt  upi_analyzer.py
(+7 files in other folders)
