[project]
name = "phishguard-india"
version = "2.0.0"
description = "Proprietary UPI & Phishing Defense Engine Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.35.0",
    "pandas",
    "numpy",
    "xgboost",
    "scikit-learn",
    "plotly",
    "pyzbar",
    "Pillow",
    "pymongo",
    "tldextract",
    "python-whois",
    "beautifulsoup4",
    "joblib",
    "fuzzywuzzy",
    "python-Levenshtein",
]
